[gd_scene load_steps=4 format=2]

[ext_resource path="res://Test/dude.gd" type="Script" id=1]
[ext_resource path="res://Test/1.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

[node name="dude" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AngleCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -100 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="Position2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/Area2D"]
position = Vector2( 0, -59 )
scale = Vector2( 7, -7 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="body_entered" from="Position2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Position2D/Area2D" to="." method="_on_Area2D_body_exited"]
